feat: 100% dynamic live quote engine & single-pane zero-scroll UX refactoring